--- a/loginpage.html
+++ b/loginpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="github.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="loginpagestyle.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>GitHub</title>
 </head>
@@ -17,13 +17,13 @@
         <div class="userdetails">
             <form>
                 <label>Username</label><br><br>
-                <input type="text"><br><br>
+                <input type="text" required><br><br>
                 <div class="pass">
                 <label>Password</label>
-                <a href="forget.html">Forgot password?</label>
+                <a href="forgot.html">Forgot password?</a>
                 </div><br>
-                <input type="password"><br><br>
-                <button><a href="submit.html">Submit</a></button>
+                <input type="password" required><br><br>
+                <button><a href="formsubmit.html">Submit</button>
             </form>
         </div>
         <div class="createaccount">
